--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                   aria-labelledby="arkiveringsversion-tab"
                 >
                   <!-- arkiveringsversion -->
-                  <form action="heuristiskenhed.html">
+                  <form action="heuristiskenhed.html#arkiveringsversion">
                     <div class="container-fluid">
                       <div class="row mb-3">
                         <div class="col-sm-12">
