--- a/magasinenhed.html
+++ b/magasinenhed.html
@@ -167,14 +167,14 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios1"
+                                      name="radiokonserver"
+                                      id="rd1-1"
                                       value="option1"
                                       checked
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios1"
+                                      class="form-check-label ml-2"
+                                      for="rd1-1"
                                     >
                                       Ja
                                     </label>
@@ -183,13 +183,13 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios2"
+                                      name="radiokonserver"
+                                      id="rd1-2"
                                       value="option2"
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios2"
+                                      class="form-check-label ml-2"
+                                      for="rd1-2"
                                     >
                                       Nej
                                     </label>
@@ -210,14 +210,14 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios1"
+                                      name="radioUorden"
+                                      id="radioUorden1"
                                       value="option1"
                                       checked
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios1"
+                                      class="form-check-label ml-2"
+                                      for="radioUorden11"
                                     >
                                       Ja
                                     </label>
@@ -226,13 +226,13 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios2"
+                                      name="radioUorden"
+                                      id="radioUorden2"
                                       value="option2"
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios2"
+                                      class="form-check-label ml-2"
+                                      for="radioUorden2"
                                     >
                                       Nej
                                     </label>
@@ -257,14 +257,14 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios1"
+                                      name="ENBRadios"
+                                      id="ENBRadios1"
                                       value="option1"
                                       checked
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios1"
+                                      class="form-check-label ml-2"
+                                      for="ENBRadios1"
                                     >
                                       Ja
                                     </label>
@@ -273,13 +273,13 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios2"
+                                      name="ENBRadios"
+                                      id="ENBRadios2"
                                       value="option2"
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios2"
+                                      class="form-check-label ml-2"
+                                      for="ENBRadios2"
                                     >
                                       Nej
                                     </label>
@@ -300,14 +300,14 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios1"
+                                      name="kasseretRadios"
+                                      id="kasseretRadios1"
                                       value="option1"
                                       checked
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios1"
+                                      class="form-check-label ml-2"
+                                      for="kasseretRadios1"
                                     >
                                       Ja
                                     </label>
@@ -316,13 +316,13 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios2"
+                                      name="kasseretRadios"
+                                      id="kasseretRadios2"
                                       value="option2"
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios2"
+                                      class="form-check-label ml-2"
+                                      for="kasseretRadios2"
                                     >
                                       Nej
                                     </label>
@@ -343,14 +343,14 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios1"
+                                      name="udlaanesRadio"
+                                      id="udlaanesRadio1"
                                       value="option1"
                                       checked
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios1"
+                                      class="form-check-label ml-2"
+                                      for="udlaanesRadio1"
                                     >
                                       Ja
                                     </label>
@@ -359,13 +359,13 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios2"
+                                      name="udlaanesRadio"
+                                      id="udlaanesRadio2"
                                       value="option2"
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios2"
+                                      class="form-check-label ml-2"
+                                      for="udlaanesRadio2"
                                     >
                                       Nej
                                     </label>
@@ -491,7 +491,7 @@
                                 <div class="col-sm-6 font-weight-semibold">
                                   Indhold
                                 </div>
-                                <div class="col-sm-6">
+                                <div class="col-sm-6 readonly">
                                   <p class="mb-0">
                                     1993 1 -<br />
                                     1994 5778
@@ -683,7 +683,7 @@
                                                     checked
                                                   />
                                                   <label
-                                                    class="form-check-label"
+                                                    class="form-check-label ml-2"
                                                     for="tyveradio1"
                                                   >
                                                     Ja
@@ -700,7 +700,7 @@
                                                     value="option2"
                                                   />
                                                   <label
-                                                    class="form-check-label"
+                                                    class="form-check-label ml-2"
                                                     for="tyveradio2"
                                                   >
                                                     Nej
@@ -738,7 +738,7 @@
                                                     checked
                                                   />
                                                   <label
-                                                    class="form-check-label"
+                                                    class="form-check-label ml-2"
                                                     for="AOScannet1"
                                                   >
                                                     Ja
@@ -755,7 +755,7 @@
                                                     value="option2"
                                                   />
                                                   <label
-                                                    class="form-check-label"
+                                                    class="form-check-label ml-2"
                                                     for="AOScannet2"
                                                   >
                                                     Nej
@@ -814,49 +814,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Heuristik Enhed Modal -->
-    <div
-      class="modal fade"
-      id="heuristiskeenhed-modal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="heuristiskeenhed-modal"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <span class="badge badge-success badge-pill mt-3 mb-4"
-              >Heuristisk enhed</span
-            >
-            <h1 class="font-weight-extrabold">Ordensmagt Røverier</h1>
-            <h3 class="text-secondary">Ordenspolitiet, 1919 - 2006</h3>
-            <h5 class="mt-4 mb-1 text-secondary">
-              Type:
-              Komponent&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Undertype:
-              Ja&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Kladde:
-              Ja&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Kasseret: Nej
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            tekst
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">
-              Luk
-            </button>
           </div>
         </div>
       </div>
