--- a/arkivskaber.html
+++ b/arkivskaber.html
@@ -260,14 +260,14 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios1"
+                                      name="kladde"
+                                      id="kladde1"
                                       value="option1"
                                       checked
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios1"
+                                      class="form-check-label ml-2"
+                                      for="kladde1"
                                     >
                                       Ja
                                     </label>
@@ -276,13 +276,13 @@
                                     <input
                                       class="form-check-input"
                                       type="radio"
-                                      name="exampleRadios"
-                                      id="exampleRadios2"
+                                      name="kladde"
+                                      id="kladde2"
                                       value="option2"
                                     />
                                     <label
-                                      class="form-check-label"
-                                      for="exampleRadios2"
+                                      class="form-check-label ml-2"
+                                      for="kladde2"
                                     >
                                       Nej
                                     </label>
@@ -1848,9 +1848,13 @@ of Lorem Ipsum.
                 </div>
               </div>
             </div>
-            <h4 class="mb-3 ml-2 mt-3">
-              <span class="font-weight-bold">33</span> resultater
-            </h4>
+            <div class="card mt-3">
+              <div class="card-body p-0">
+                <h4 class="mb-3 ml-3 mt-3">
+                  <span class="font-weight-bold">33</span> resultater
+                </h4>
+              </div>
+            </div>
             <div class="card special mt-3 mb-3">
               <div class="card-body p-0">
                 <div class="table-responsive">
@@ -2021,10 +2025,14 @@ of Lorem Ipsum.
                 </div>
               </div>
             </div>
-            <h4 class="mb-3 ml-2 mt-3">
-              <span class="font-weight-bold">33</span> resultater
-            </h4>
-            <div class="card">
+            <div class="card mt-3">
+              <div class="card-body p-0">
+                <h4 class="mb-3 ml-3 mt-3">
+                  <span class="font-weight-bold">33</span> resultater
+                </h4>
+              </div>
+            </div>
+            <div class="card mt-3">
               <div class="card-body p-0">
                 <div class="table-responsive">
                   <table
