--- a/search/search-eksemplar.html
+++ b/search/search-eksemplar.html
@@ -204,7 +204,7 @@
                   <tbody>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html"
+                      data-href="../heuristiskenhed-papir.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -219,7 +219,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html#heeksemplarer"
+                      data-href="../heuristiskenhed-papir.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -234,7 +234,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html#heeksemplarer"
+                      data-href="../heuristiskenhed-papir.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -249,7 +249,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html#heeksemplarer"
+                      data-href="../heuristiskenhed-papir.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -264,7 +264,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html#heeksemplarer"
+                      data-href="../heuristiskenhed-papir.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
@@ -279,7 +279,7 @@
                     </tr>
                     <tr
                       class="clickable-row"
-                      data-href="../heuristiskenhed.html#heeksemplarer"
+                      data-href="../heuristiskenhed-papir.html#heeksemplarer"
                     >
                       <td>
                         FRB Politi
